--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind": "^4.0.0",
-    "youtubei.js": "^7.0.0",
+    "ytsr": "^3.0.0",
     "ytpl": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
